[package]
name = "bitcoincore-rpc"
version = "0.12.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
edition="2018"
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
repository = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc" ]
readme = "README.md"

[lib]
name = "bitcoincore_rpc"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json = { version = "0.12.0", path = "../json"}
async-trait = "0.1.42"
log = "0.4.5"
jsonrpc-async = "2.0.1"

# Used for deserialization of JSON.
serde = "1"
serde_json = "1.0.61"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }