[package]
name = "bitcoincore-rpc-async"
version = "4.0.1-alpha.2"
authors = [
    "Jeremy Rubin <j@rubin.io>",
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
edition="2018"
license = "CC0-1.0"
homepage = "https://github.com/jeremyrubin/rust-bitcoincore-rpc-async/"
repository = "https://github.com/jeremyrubin/rust-bitcoincore-rpc-async/"
description = "RPC client library for the Bitcoin Core JSON-RPC API."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc", "asynchronous" ]
readme = "README.md"

[lib]
name = "bitcoincore_rpc_async"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc-json-async = { version = "4.0.1-alpha.2", path = "../json"}
async-trait = "0.1.42"
log = "0.4.5"
jsonrpc-async = {version="2.0.2"}

# Used for deserialization of JSON.
serde = "1"
serde_json = "1.0.61"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
