[package]
name = "bitcoincore-rpc-json-async"
version = "4.0.0-alpha.0"
authors = [
    "Jeremy Rubin <j@rubin.io>",
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/jeremyrubin/rust-bitcoincore-rpc-async/"
repository = "https://github.com/jeremyrubin/rust-bitcoincore-rpc-async/"
description = "JSON-enabled type structs for bitcoincore-rpc crate."
keywords = [ "crypto", "bitcoin", "bitcoin-core", "rpc", "asynchronous" ]
readme = "README.md"
edition="2018"

[lib]
name = "bitcoincore_rpc_json_async"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.3"

bitcoin = { package = "sapio-bitcoin", version = "0.28.0-rc.3", features = [ "use-serde" ] }
